--- a/src/java/com/gestec/language/mensajesGestec_en.properties
+++ b/src/java/com/gestec/language/mensajesGestec_en.properties
@@ -305,3 +305,18 @@ reportarQueja=Report a complaint
 escribasuquejaoreclamo=You write complaint or claim
 ingreseNombres=Enter their names
 ingreseApellidos=Enter their last names
+
+mensaje1=It requires personal with knowledge in computer equipment diagnostics and basic programming concepts to solve problems of compatibility with drivers
+mensaje2=I have experience installing drivers to solve any kind of inconvenience related to the devices that are generating conflict
+mensaje3=I have basic knowledge of programming 
+mensaje4=I need personal who have intervened drivers previously, because at the moment I only have this equipment, and being misconfigured would generate many delays in my work 
+mensaje5=I can configure your equipment at a very economical price, I also guarantee that the system will be working perfectly and does not present any type of failure
+mensaje6=I have basic knowledge of networks
+mensaje7=Later I will review to make the decision of the personal in charge of configuring the equipment, for the moment I will review other options
+mensaje8=I can solve that problem at a very economical price
+mensaje9=They need staff to restore a system to a certain date
+mensaje10=I can repair the operating system of that computer at a very low price and completely guaranteed
+mensaje11=I retaur the computer equipment
+mensaje12=They require a person to relize this work in a simple way, because it does not have much difficulty
+mensaje13=I deal with that problem and also generate a backup so the information is not lost
+mensaje14=Well I would expect that no later than tomorrow afternoon will complete the entire process of the request
