--- a/src/java/com/gestec/language/mensajesGestec_es.properties
+++ b/src/java/com/gestec/language/mensajesGestec_es.properties
@@ -307,3 +307,18 @@ reportarQueja=Reportar una queja
 escribasuquejaoreclamo=Escriba su queja o reclamo
 ingreseNombres=Ingrese su(s) nombres
 ingreseApellidos=Ingrese su(s) apellidos
+
+mensaje1=Se requiere de personal con conocimientos en diagnostico de equipos de computo y conceptos basicos de programacion para solucionar problemas de compatibilidad con drivers
+mensaje2=Tengo experiencia instalando controladores para solucionar cualquier tipo de inconveniente relacionado con los dispositivos que estan generando conflicto
+mensaje3=Tengo conocimientos basicos de programacion
+mensaje4=Necesito personal que haya intervenido drivers anteriormente, pues en este momento solo dispongo de este equipo, y de quedar mal configurado me generaria muchos retardos en mi trabajo
+mensaje5=Te puedo configurar tu equipo a un precio muy economico, ademas garantizo que el sistema estara funcionando perfectamente y no presente ningun tipo de fallo 
+mensaje6=Tengo conocimientos basicos en redes
+mensaje7=Mas tarde revisare para tomar la decision del personal encargado de configurar el equipo, de momento revisare otras opciones
+mensaje8=Puedo solucionar ese problema a un precio muy economico
+mensaje9=Se necesita personal para restaurar un sistema a una fecha determinada
+mensaje10=Puedo reparar el sistema operativo de ese equipo de computo a un precio muy bajo y completamente garantizado
+mensaje11=Yo restauro el equipo de computo
+mensaje12=Se requiere a una persona que relize este trabajo de manera sencilla, por que no tiene mucha dificultad
+mensaje13=Yo me encargo de ese problema y ademas genero una copia de seguridad para que no se pierda informacion
+mensaje14=Bueno esperaria que a mas tardar ma\u00f1ana por la tarde se completara todo el proceso de la solicitud
