--- a/src/java/com/gestec/language/mensajesGestec_en.properties
+++ b/src/java/com/gestec/language/mensajesGestec_en.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-es=Es
-en=En
+es=Spanish
+en=English
 acerca=About
 puntos=Points
 servicios1= Services provided
