--- a/src/java/com/gestec/language/mensajesGestec_es.properties
+++ b/src/java/com/gestec/language/mensajesGestec_es.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-es=Es
-en=En
+es=Espa\u00f1ol
+en=Ingl\u00e9s
 acerca=Acerca de
 puntos=Puntos
 servicios1= Servicios prestados
