--- a/src/java/com/gestec/language/mensajesGestec.properties
+++ b/src/java/com/gestec/language/mensajesGestec.properties
@@ -321,4 +321,5 @@ mensaje11=Yo restauro el equipo de computo
 mensaje12=Se requiere a una persona que relize este trabajo de manera sencilla, por que no tiene mucha dificultad
 mensaje13=Yo me encargo de ese problema y ademas genero una copia de seguridad para que no se pierda informacion
 mensaje14=Bueno esperaria que a mas tardar ma\u00f1ana por la tarde se completara todo el proceso de la solicitud
-
+buscar=Buscar
+cargarEquipos=Cargar nuevos equipos
