--- a/src/java/com/gestec/language/mensajesGestec_en.properties
+++ b/src/java/com/gestec/language/mensajesGestec_en.properties
@@ -320,3 +320,5 @@ mensaje11=I retaur the computer equipment
 mensaje12=They require a person to relize this work in a simple way, because it does not have much difficulty
 mensaje13=I deal with that problem and also generate a backup so the information is not lost
 mensaje14=Well I would expect that no later than tomorrow afternoon will complete the entire process of the request
+buscar=Search
+cargarEquipos=Load new equipment
