--- a/src/java/com/gestec/language/mensajesGestec_en.properties
+++ b/src/java/com/gestec/language/mensajesGestec_en.properties
@@ -322,3 +322,66 @@ mensaje13=I deal with that problem and also generate a backup so the information
 mensaje14=Well I would expect that no later than tomorrow afternoon will complete the entire process of the request
 buscar=Search
 cargarEquipos=Load new equipment
+
+nuevoUsuario=New user
+registroUsuarios=User registration
+nombreUsuario=Username
+ingreseNombreUser=Enter username
+apellidoUsuario=Last name user
+ingreseApellidos=Enter your last names
+ingreseUnApellido=Enter a last name
+noNumerosEsp=No numbers or special characters
+tipoDocumento=Document type
+seleccioneDocumento=Select a document
+cedulaCiudadania=Identity card
+cedulaExtranjera=Foreigner ID
+otro=Other
+documentoNum=Document Num:
+ingreseNumeroDoc=Enter document number
+documentoNoValido=Invalid document number
+digiteContra=Enter your password
+confirmarContra=Confirm password
+tipoUser=Type of user
+seleccioneTipoUser=Select a type of user
+genero=Gender
+indiqueGenero=Indicate your gender
+fechaNacimiento=Birthday
+ingreseFechaNac=Enter your birthday
+discapacidad=Disability
+indiqueDiscapacidad=Indicate if you have a disability
+escribaSiNoDisc=Write if you have any disability
+direccionCorreo=Email address
+correoElectronico=Write an email
+escribaCorreoValido=Write an valid email
+tipoTelefono=Type of phone
+seleccioneTipoTelefono=Select a type of phone
+telefonoMovil=Mobile phone
+telefonoFijo=Landline
+numeroTelefono=Number of phone: 
+ingreseTelefono=Enter a number of phone
+numeroNoValido=The number is invalid
+seleccioneLocalidad=Select a location
+indiqueEspecialidad=Indicate a type of speciality
+informacionDireccion=General address information
+campoObligatorio=Required field
+noValido=Not valid
+tipoVia=Type of road Ej:Street
+numeroVia=Number of road
+complementoVia=Complement road ej:A 
+complementoVia2=Complement road 2 ej:B
+numeroCasa=Number of house
+complemento=Complement ej:Sur
+registroCompletado=Successfully completed registration
+correoEnviado=We have sent you an email with access information
+
+recuperarContra=Recover password
+recuperarAcceso=Recover the access
+digiteCorreo=Enter your email address in the corresponding field
+seleccioneOpcion=Select the option recover password
+porUltimo=By last, Check your email
+correoEnviadoExi=Email successfully sent
+problemasServidor=Internal server issues
+correoNoExiste=Email does not exist
+escribaSuCorreo=Enter your email here
+
+bundle1=Username already exist
