--- a/src/java/com/gestec/language/mensajesGestec_es.properties
+++ b/src/java/com/gestec/language/mensajesGestec_es.properties
@@ -324,3 +324,66 @@ mensaje13=Yo me encargo de ese problema y ademas genero una copia de seguridad p
 mensaje14=Bueno esperaria que a mas tardar ma\u00f1ana por la tarde se completara todo el proceso de la solicitud
 buscar=Buscar
 cargarEquipos=Cargar nuevos equipos
+
+nuevoUsuario=Nuevo usuario
+registroUsuarios=Registro de usuarios
+nombreUsuario=Nombre de usuario
+ingreseNombreUser=Ingrese nombre de usuario
+apellidoUsuario=Apellido usuario
+ingreseApellidos=Ingrese sus apellidos
+ingreseUnApellido=Ingrese un apellido
+noNumerosEsp=No numeros ni caracteres especiales
+tipoDocumento=Tipo de documento
+seleccioneDocumento=Seleccione un documento
+cedulaCiudadania=Cedula de ciudadania
+cedulaExtranjera=Cedula extranjera
+otro=Otro
+documentoNum=Documento Num:
+ingreseNumeroDoc=Ingrese numero de documento
+documentoNoValido=Numero de documento no valido
+digiteContra=Digite su contrase\u00f1a
+confirmarContra=Confirmar contrase\u00f1a
+tipoUser=Tipo de ususario
+seleccioneTipoUser=Seleccione tipo de usuario
+genero=G\u00e9nero
+indiqueGenero=Indique su genero
+fechaNacimiento=Fecha de nacimiento
+ingreseFechaNac=Ingrese su fecha de nacimiento
+discapacidad=Discapacidad
+indiqueDiscapacidad=Indique si tiene alguna discapacidad
+escribaSiNoDisc=Escriba si tiene o no una discapacidad
+direccionCorreo=Direccion de correo electronico
+correoElectronico=Escriba un correo electronico
+escribaCorreoValido=Escriba un correo electronico valido
+tipoTelefono=Tipo de tel\u00e9fono
+seleccioneTipoTelefono=Seleccione un tipo de tel\u00e9fono
+telefonoMovil=Tel\u00e9fono Movil
+telefonoFijo=Tel\u00e9fono Fijo
+numeroTelefono=Numero de tel\u00e9fono: 
+ingreseTelefono=Ingrese un numero de tel\u00e9fono
+numeroNoValido=El n\u00famero no es valido
+seleccioneLocalidad=Seleccione una localidad
+indiqueEspecialidad=Indique un tipo de especialidad
+informacionDireccion=Informaci\u00f3n general de direcci\u00f3n
+campoObligatorio=Campo obligatorio
+noValido=No valido
+tipoVia=Tipo de via Ej:Calle
+numeroVia=Numero de via
+complementoVia=Complemento via ej:A 
+complementoVia2=Complemento via 2 ej:B
+numeroCasa=Numero de casa
+complemento=Complemento ej:Sur
+registroCompletado=Registro completado exitosamente
+correoEnviado=Te hemos enviado un correo con la informaci\u00f3n de acceso
+
+recuperarContra=Recuperar contrase\u00f1a
+recuperarAcceso=Recuperar el acceso
+digiteCorreo=Digite su direcci\u00f3n de correo electronico en el campo correspondiente
+seleccioneOpcion=Seleccione la opci\u00f3n de recuperar contrase\u00f1a
+porUltimo=Por ultimo, revise su correo electronico
+correoEnviadoExi=Correo electronico enviado exitosamente
+problemasServidor=Problemas internos del servidor
+correoNoExiste=El correo electronico no existe
+escribaSuCorreo=Escriba aqui su correo electronico
+
+bundle1=El nombre de usuario ya existe!
