--- a/src/java/com/gestec/language/mensajesGestec.properties
+++ b/src/java/com/gestec/language/mensajesGestec.properties
@@ -387,3 +387,18 @@ escribaSuCorreo=Escriba aqui su correo electronico
 
 
 bundle1=El nombre de usuario ya existe!
+bundle2=Nombre de usuario obligatorio
+bundle3=Correo electronico ya existe
+bundle4=Direcci\u00f3n de correo electronico obligatoria
+bundle5=Este campo es requerido
+bundle6=Las contrase\u00f1as no coinciden
+bundle7=El documento ya existe
+bundle8=Seleccione una fecha
+bundle9=La fecha debe ser inferior a 2000-01-01
+
+seleccioneEspecialidad=Seleccione una especialidad
+ninguna=Ninguna
+masculino=Masculino
+femenino=Femenino
+datosIncorrectos=Datos incorrectos
+camposObligatorios=Todos los campos son obligatorios
