--- a/src/java/com/gestec/language/mensajesGestec_en.properties
+++ b/src/java/com/gestec/language/mensajesGestec_en.properties
@@ -385,3 +385,18 @@ correoNoExiste=Email does not exist
 escribaSuCorreo=Enter your email here
 
 bundle1=Username already exist
+bundle2=Username is required
+bundle3=Email already exist
+bundle4=Email address is required
+bundle5=This field is required
+bundle6=Passwords does not match
+bundle7=The document already exist
+bundle8=Select a date
+bundle9=The date must be less than 2000-01-01
+
+seleccioneEspecialidad=Select a specialty
+ninguna=Neither
+masculino=Male
+femenino=Female
+datosIncorrectos=Incorrect data
+camposObligatorios=All fields are required
