--- a/src/java/com/gestec/language/mensajesGestec.properties
+++ b/src/java/com/gestec/language/mensajesGestec.properties
@@ -284,7 +284,7 @@ fechaNacimiento=Fecha de nacimiento
 editarp6=La fecha de nacimiento es obligatoria
 corre=Correo
 editarp8=El correo es obligatorio
-editarp9=El nombre de usuario es obligatorio
+editarp9=El campo es obligatorio
 contraAntigua=Contrase\u00f1a antigua
 contraNueva=Contrase\u00f1a nueva
 repetirContra=Repetici\u00f3n contrase\u00f1a nueva
@@ -402,4 +402,3 @@ masculino=Masculino
 femenino=Femenino
 datosIncorrectos=Datos incorrectos
 camposObligatorios=Todos los campos son obligatorios
-userInactivo = Cuenta inactiva
