--- a/src/java/com/gestec/language/mensajesGestec_en.properties
+++ b/src/java/com/gestec/language/mensajesGestec_en.properties
@@ -283,7 +283,7 @@ fechaNacimiento=Birthday
 editarp6=The birthday is required
 corre=Mail
 editarp8=The mail is required
-editarp9=The name of user is required
+editarp9=The field is required
 contraAntigua=Old password
 contraNueva=New password
 repetirContra=Repeat new password
@@ -400,4 +400,3 @@ masculino=Male
 femenino=Female
 datosIncorrectos=Incorrect data
 camposObligatorios=All fields are required
-userInactivo = Account inactive
