--- a/src/java/com/gestec/language/mensajesGestec.properties
+++ b/src/java/com/gestec/language/mensajesGestec.properties
@@ -402,3 +402,4 @@ masculino=Masculino
 femenino=Femenino
 datosIncorrectos=Datos incorrectos
 camposObligatorios=Todos los campos son obligatorios
+userInactivo=Cuenta Inactiva
