--- a/src/java/com/gestec/language/mensajesGestec_en.properties
+++ b/src/java/com/gestec/language/mensajesGestec_en.properties
@@ -400,3 +400,4 @@ masculino=Male
 femenino=Female
 datosIncorrectos=Incorrect data
 camposObligatorios=All fields are required
+userInactivo=Inactive account
